--- a/gestao-eventos-web/WebContent/WEB-INF/web.xml
+++ b/gestao-eventos-web/WebContent/WEB-INF/web.xml
@@ -33,6 +33,10 @@
     <servlet-name>Gestao</servlet-name>
     <url-pattern>/evento/excluir</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/evento/add-participante</url-pattern>
+  </servlet-mapping>
     <servlet-mapping>
     <servlet-name>Gestao</servlet-name>
     <url-pattern>/participantes/salvar</url-pattern>
