Ajustes no Convidar Participante + Ajustes nos CRUDs

--- a/gestao-eventos-web/WebContent/WEB-INF/web.xml
+++ b/gestao-eventos-web/WebContent/WEB-INF/web.xml
@@ -41,6 +41,10 @@
     <servlet-name>Gestao</servlet-name>
     <url-pattern>/evento/consultar-participantes</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/evento/participantes-evento</url-pattern>
+  </servlet-mapping>
     <servlet-mapping>
     <servlet-name>Gestao</servlet-name>
     <url-pattern>/participantes/salvar</url-pattern>
