--- a/gestao-eventos-web/WebContent/WEB-INF/web.xml
+++ b/gestao-eventos-web/WebContent/WEB-INF/web.xml
@@ -23,6 +23,10 @@
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>Gestao</servlet-name>
+    <url-pattern>/sair</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
     <url-pattern>/evento/salvar</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
