--- a/gestao-eventos-web/WebContent/WEB-INF/web.xml
+++ b/gestao-eventos-web/WebContent/WEB-INF/web.xml
@@ -61,6 +61,22 @@
     <servlet-name>Gestao</servlet-name>
     <url-pattern>/evento/eventos-convidado</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/evento/lista-produtos-rateio</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/evento/salvar-produtos-rateio</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/evento/alterar-produtos-rateio</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/evento/estoque-evento</url-pattern>
+  </servlet-mapping>
     <servlet-mapping>
     <servlet-name>Gestao</servlet-name>
     <url-pattern>/participantes/salvar</url-pattern>
@@ -108,6 +124,22 @@
   <servlet-mapping>
     <servlet-name>Gestao</servlet-name>
     <url-pattern>/estoque/excluir</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/locacoes/salvar</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/locacoes/consultar</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/locacoes/alterar</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Gestao</servlet-name>
+    <url-pattern>/locacoes/excluir</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>Gestao</servlet-name>
